center buttons on small screens

--- a/src/app/contact/contact-form/contact-form.component.html
+++ b/src/app/contact/contact-form/contact-form.component.html
@@ -106,9 +106,15 @@
             Please enter a message.
           </div>
         </div>
-        <button class="btn btn-blue" type="submit" [disabled]="!formData.valid">
-          Send Message
-        </button>
+        <div class="button-container">
+          <button
+            class="btn btn-blue"
+            type="submit"
+            [disabled]="!formData.valid"
+          >
+            Send Message
+          </button>
+        </div>
         <div class="form-text text-muted small" *ngIf="thankYou">
           Thank You for your interest.
         </div>
