--- a/src/app/courses/course-card/course-card.component.html
+++ b/src/app/courses/course-card/course-card.component.html
@@ -8,7 +8,7 @@
         <div class="card mt-3" *ngIf="i < 8">
           <img src="{{ course.image }}" class="card-img-top" alt="..." />
           <div class="card-body">
-            <h4 class="card-title">
+            <h4 class="card-title mb-3">
               <a
                 (click)="onShowCourse(i, course.title)"
                 style="cursor: pointer"
