--- a/src/app/home/about/about.component.html
+++ b/src/app/home/about/about.component.html
@@ -18,9 +18,11 @@
             officiis. Esse ullam nostrum reiciendis, quasi omnis corporis
             nesciunt quisquam harum necessitatibus. Fugiat, quidem!
           </p>
-          <button class="btn btn-blue mt-3" (click)="onToAbout()">
-            Find Out More
-          </button>
+          <div class="button-container">
+            <button class="btn btn-blue mt-3" (click)="onToAbout()">
+              Find Out More
+            </button>
+          </div>
         </div>
       </div>
       <div class="col-md-6 about_image">Image this side</div>
