--- a/src/app/home/courses/courses.component.html
+++ b/src/app/home/courses/courses.component.html
@@ -7,7 +7,7 @@
     </div>
     <div class="row courses">
       <div
-        class="col-md-4 mt-4"
+        class="col-lg-4 mt-4"
         *ngFor="let course of courseList; let i = index"
       >
         <div class="card" *ngIf="i < 3">
@@ -17,7 +17,7 @@
             alt="{{ course.title }}"
           />
           <div class="card-body">
-            <h5 class="card-title">{{ course.title }}</h5>
+            <h5 class="card-title mx-2">{{ course.title }}</h5>
             <p class="card-text">
               {{ course.information | wordCut }}
             </p>
@@ -35,32 +35,6 @@
           </div>
         </div>
       </div>
-      <!-- <div class="col-md-4">
-        <div class="card">
-          <img src="..." class="card-img-top" alt="..." />
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
-            <a href="#" class="btn btn-blue">Go somewhere</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="card">
-          <img src="..." class="card-img-top" alt="..." />
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
-            <a href="#" class="btn btn-blue">Go somewhere</a>
-          </div>
-        </div>
-      </div> -->
     </div>
     <div class="row">
       <div class="col text-center">
