--- a/src/app/home/contact/contact.component.html
+++ b/src/app/home/contact/contact.component.html
@@ -15,9 +15,11 @@
             vitae officiis corporis eveniet ratione doloribus eum quae voluptas,
             hic odio veritatis ullam. Non, a dolor!
           </p>
-          <button class="btn btn-blue my-3" (click)="onToContact()">
-            Contact Us
-          </button>
+          <div class="button-container">
+            <button class="btn btn-blue my-3" (click)="onToContact()">
+              Contact Us
+            </button>
+          </div>
         </div>
       </div>
     </div>
