--- a/src/app/home/contact/contact.component.scss
+++ b/src/app/home/contact/contact.component.scss
@@ -8,3 +8,9 @@ h2,
 p {
   color: $color-blue;
 }
+
+@media only screen and (max-width: 600px) {
+  .button-container {
+    text-align: center;
+  }
+}
