--- a/src/app/about-us/advice/advice.component.scss
+++ b/src/app/about-us/advice/advice.component.scss
@@ -1,10 +1,10 @@
 @import "../../../styles/styles.scss";
 
 .advice {
-  height: 500px;
+  height: 50rem;
   text-align: center;
   color: $color-blue;
   &_text {
-    padding: 100px 10px;
+    padding: 10rem 1rem;
   }
 }
