--- a/src/app/contact/contact-form/contact-form.component.scss
+++ b/src/app/contact/contact-form/contact-form.component.scss
@@ -2,18 +2,19 @@
 
 form {
   margin: 0 auto;
-  padding: 20px 20px;
+  padding: 2rem 2rem;
   border-radius: 5px;
-  margin: 40px 20px;
-  box-shadow: 5px 10px 20px $color-blue;
+  margin: 4rem 2rem;
+  box-shadow: 5px 1rem 2rem $color-blue;
 
   @media only screen and (max-width: 600px) {
-    box-shadow: 0px 10px 20px $color-blue;
+    box-shadow: 0px 1rem 2rem $color-blue;
   }
 
   & label {
     color: $color-blue;
-    padding-left: 15px;
+    padding-left: 1.5rem;
+    font-size: 1.6rem;
   }
 
   & input,
@@ -23,6 +24,7 @@ form {
     border-bottom: 1px solid $color-blue;
     background-color: $color-paleBlue;
     border-radius: 0;
+    font-size: 1.6rem;
   }
 
   & input.ng-invalid.ng-touched,
@@ -45,10 +47,10 @@ form {
     margin: 0 auto;
     width: 80%;
     border-radius: 5px;
-    box-shadow: 5px 10px 20px $color-blue;
+    box-shadow: 5px 1rem 2rem $color-blue;
 
     @media only screen and (max-width: 600px) {
-      box-shadow: 0px 10px 20px $color-blue;
+      box-shadow: 0px 1rem 2rem $color-blue;
     }
 
     & p {
