--- a/src/app/courses/course-card/course-card.component.scss
+++ b/src/app/courses/course-card/course-card.component.scss
@@ -10,9 +10,21 @@
 
 h4 {
   color: $color-blue;
+  // animation-name: highLighter;
+  // animation-duration: 2s;
+  // animation-iteration-count: 2;
   transition: all 0.5s;
 
   &:hover {
     color: $color-active;
   }
 }
+
+// @keyframes highLighter {
+//   from {
+//     color: $color-blue;
+//   }
+//   to {
+//     color: $color-active;
+//   }
+// }
