--- a/src/app/layout/footer/footer.component.scss
+++ b/src/app/layout/footer/footer.component.scss
@@ -2,7 +2,7 @@
 
 .footer {
   //position: fixed;
-  padding-top: 100px;
+  padding-top: 10rem;
   left: 0;
   bottom: 0;
   width: 100%;
@@ -17,6 +17,7 @@
 .nav-link {
   color: $color-active;
   padding: 0;
+  font-size: 1.6rem;
 
   &:hover {
     text-decoration: underline;
@@ -30,6 +31,6 @@
 @media only screen and (max-width: 600px) {
   .col-md-4 {
     text-align: center;
-    padding: 0 10px;
+    padding: 0 1rem;
   }
 }
