--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -4,6 +4,7 @@
   color: $color-white;
   border-radius: 20px;
   transition: all 0.2s;
+  font-size: 1.6rem;
 
   &:hover {
     box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
