--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -8,10 +8,26 @@
 body {
   box-sizing: border-box;
   background-color: $color-paleBlue;
+  color: $color-active;
 }
 
 html {
   font-family: "Lato", sans-serif;
+  font-size: 62.5%;
+}
 
-  // font-size: 62.5%;
+p {
+  font-size: 1.6rem;
+}
+h1 {
+  font-size: 4rem;
+}
+h2 {
+  font-size: 3.2rem;
+}
+h3 {
+  font-size: 2.4rem;
+}
+h5 {
+  font-size: 2rem;
 }
