images added to home screen+courses

--- a/src/app/home/about/about.component.html
+++ b/src/app/home/about/about.component.html
@@ -1,8 +1,8 @@
 <section>
   <div class="container about">
-    <div class="row">
+    <div class="row py-5">
       <div class="col-md-6">
-        <div class="about_text-box py-5">
+        <div class="about_text-box">
           <h2 class="pb-4">A Leader in First Aid Courses across Ireland</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus
@@ -25,7 +25,11 @@
           </div>
         </div>
       </div>
-      <div class="col-md-6 about_image">Image this side</div>
+      <div class="col-md-6 about_image my-auto">
+        <div class="img-fluid">
+          <img src="../../../assets/images/first-aid-kit3.png" alt="" />
+        </div>
+      </div>
     </div>
   </div>
 </section>
