--- a/src/app/home/about/about.component.scss
+++ b/src/app/home/about/about.component.scss
@@ -9,6 +9,10 @@ section {
   color: $color-white;
 }
 
+img {
+  width: 100%;
+}
+
 @media only screen and (max-width: 600px) {
   .button-container {
     text-align: center;
