--- a/src/app/home/contact/contact.component.html
+++ b/src/app/home/contact/contact.component.html
@@ -1,7 +1,11 @@
 <section>
   <div class="container contact py-5">
     <div class="row">
-      <div class="col-md-6">image</div>
+      <div class="col-md-6">
+        <div class="img-fluid">
+          <img src="../../../assets/images/contact-us.jpg" alt="" />
+        </div>
+      </div>
       <div class="col-md-6">
         <div class="contact-box">
           <h2 class="pb-4">Please Get In Touch</h2>
