aligned course cards/resized images/added images

--- a/src/app/courses/course-card/course-card.component.scss
+++ b/src/app/courses/course-card/course-card.component.scss
@@ -9,7 +9,7 @@
 }
 
 h4 {
-  color: $color-blue;
+  color: $color-altOrange;
   // animation-name: highLighter;
   // animation-duration: 2s;
   // animation-iteration-count: 2;
