--- a/src/app/home/about/about.component.html
+++ b/src/app/home/about/about.component.html
@@ -26,8 +26,8 @@
         </div>
       </div>
       <div class="col-md-6 about_image my-auto">
-        <div class="img-fluid">
-          <img src="../../../assets/images/first-aid-kit3.png" alt="" />
+        <div class="img-fluid text-center">
+          <img src="../../../assets/images/first-aid-kit2.jpg" alt="" />
         </div>
       </div>
     </div>
