time added to course model/images added to about

--- a/src/app/about-us/what-we-do/what-we-do.component.html
+++ b/src/app/about-us/what-we-do/what-we-do.component.html
@@ -1,7 +1,7 @@
 <section>
   <div class="container what-we-do">
-    <div class="row">
-      <div class="col-md-6">
+    <div class="row py-5">
+      <div class="col-md-6 my-auto">
         <div class="what-we-do_text">
           <h3 class="pb-3">What We Do</h3>
           <p>
@@ -20,7 +20,11 @@
           </p>
         </div>
       </div>
-      <div class="col-md-6">image here</div>
+      <div class="col-md-6 my-auto">
+        <div class="image-fluid">
+          <img src="../../../assets/images/teacher3.jpg" alt="" />
+        </div>
+      </div>
     </div>
   </div>
 </section>
