--- a/src/app/about-us/what-we-do/what-we-do.component.scss
+++ b/src/app/about-us/what-we-do/what-we-do.component.scss
@@ -6,7 +6,11 @@ section {
 
 .what-we-do {
   &_text {
-    padding: 10rem 1rem;
+    padding: 1rem;
+  }
+
+  img {
+    width: 100%;
   }
 
   h3,
