--- a/src/app/about-us/who-we-are/who-we-are.component.html
+++ b/src/app/about-us/who-we-are/who-we-are.component.html
@@ -1,8 +1,12 @@
 <section>
   <div class="container who-we-are">
-    <div class="row">
-      <div class="col-md-6">image here</div>
-      <div class="col-md-6">
+    <div class="row py-5">
+      <div class="col-md-6 my-auto">
+        <div class="image-fluid text-center">
+          <img src="../../../assets/images/people2.jpg" alt="" />
+        </div>
+      </div>
+      <div class="col-md-6 my-auto">
         <div class="who-we-are_text">
           <h3 class="pb-3">Who We Are</h3>
           <p>
