--- a/src/app/courses/course-card/course-card.component.html
+++ b/src/app/courses/course-card/course-card.component.html
@@ -18,15 +18,17 @@
             <div class="card-info">
               <p>
                 <i class="fa fa-calendar"></i> Date:
-                {{ course.date | date: "fullDate" }}
+                {{ course.date | date: "fullDate" }}.
               </p>
+              <p><i class="fa fa-clock-o"></i> Time: {{ course.time }}.</p>
               <p>
-                <i class="fa fa-clock-o"></i> Time:
-                {{ course.time }}
+                <i class="fa fa-hourglass-o"></i> Duration:
+                {{ course.duration }}.
               </p>
-              <p><i class="fa fa-user"></i> Persons: {{ course.people }}</p>
+              <p><i class="fa fa-user"></i> Persons: {{ course.people }}.</p>
               <p>
-                <i class="fa fa-map-marker"></i> Location: {{ course.location }}
+                <i class="fa fa-map-marker"></i> Location:
+                {{ course.location }}.
               </p>
             </div>
             <p class="card-text">
