--- a/src/app/home/courses/courses.component.html
+++ b/src/app/home/courses/courses.component.html
@@ -23,14 +23,13 @@
             </p>
             <p class="card-text">
               <i class="fa fa-calendar"></i> Date:
-              {{ course.date | date: "fullDate" }}
+              {{ course.date | date: "fullDate" }}.
             </p>
             <p class="card-text">
-              <i class="fa fa-clock-o"></i> Time:
-              {{ course.time }}
+              <i class="fa fa-clock-o"></i> Time: {{ course.time }}.
             </p>
             <p class="card-text">
-              <i class="fa fa-map-marker"></i> Location: {{ course.location }}
+              <i class="fa fa-map-marker"></i> Location: {{ course.location }}.
             </p>
           </div>
         </div>
