--- a/src/app/about-us/who-we-are/who-we-are.component.scss
+++ b/src/app/about-us/who-we-are/who-we-are.component.scss
@@ -3,12 +3,22 @@
 .who-we-are {
   background-color: $color-paleBlue;
 
+  img {
+    width: 80%;
+  }
+
   &_text {
-    padding: 10rem 1rem;
+    padding: 1rem;
   }
 
   h3,
   p {
     color: $color-blue;
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  img {
+    width: 100%;
   }
 }
