--- a/src/app/home/contact/contact.component.html
+++ b/src/app/home/contact/contact.component.html
@@ -1,7 +1,7 @@
 <section>
   <div class="container contact py-5">
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-6 my-auto">
         <div class="img-fluid">
           <img src="../../../assets/images/contact-us.jpg" alt="" />
         </div>
