booking component + navigation added

--- a/src/app/courses/course-info/course-info.component.html
+++ b/src/app/courses/course-info/course-info.component.html
@@ -31,6 +31,15 @@
             <p class="card-text">
               {{ displayCourse.information }}
             </p>
+            <div class="text-center">
+              <button
+                class="btn btn-blue my-5"
+                type="button"
+                (click)="onNavigate()"
+              >
+                Book Course
+              </button>
+            </div>
           </div>
         </div>
       </div>
