--- a/src/app/courses/course-book/course-book.component.html
+++ b/src/app/courses/course-book/course-book.component.html
@@ -1,1 +1,26 @@
-<p>course-book works!</p>
+<section>
+  <div class="container py-5">
+    <div class="row">
+      <div class="col-md-8">booking form here</div>
+      <div class="col-md-4">
+        <h3 class="mb-4">First Aider Customer Testimonials</h3>
+        <p class="mb-0">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        </p>
+        <footer class="blockquote-footer mb-4">
+          Sean Burke
+          <cite title="Source Title">Care Assistant</cite>
+        </footer>
+        <div *ngFor="let quote of testimonialArray">
+          <p class="mb-0">
+            {{ quote.statement | reduceText }}
+          </p>
+          <footer class="blockquote-footer mb-4">
+            {{ quote.person }}
+            <cite title="Source Title">{{ quote.position }}</cite>
+          </footer>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
