faq-info component added/contact link connected

--- a/src/app/courses/course-info/course-info.component.html
+++ b/src/app/courses/course-info/course-info.component.html
@@ -27,7 +27,13 @@
                 <i class="fa fa-map-marker"></i> Location:
                 {{ displayCourse.location }}.
               </p>
+              <p>
+                <i class="fa fa-award-o"></i> Price: {{ displayCourse.price }}.
+              </p>
             </div>
+            <p class="card-text">
+              {{ displayCourse.information | wordCut: 70 }}
+            </p>
             <p class="card-text">
               {{ displayCourse.information }}
             </p>
