style+layout changes to FAQ page

--- a/src/app/faq/faq-contact/faq-contact.component.html
+++ b/src/app/faq/faq-contact/faq-contact.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col">
         <div class="advice_text">
-          <h3 class="pb-3">
+          <h3 class="py-5">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae earum
             eius corporis praesentium repellat dolorem!
           </h3>
@@ -11,9 +11,12 @@
             Lorem ipsum dolor, sit amet consectetur adipisicing elit.
             Accusantium quis doloribus sapiente?
           </p>
-          <button class="btn btn-blue mt-5" (click)="onToContact()">
-            Contact Us
-          </button>
+          <div class="question-image">
+            <button class="btn mt-5" (click)="onToContact()">
+              <img src="../../../assets/images/question-mark.png" alt="" />
+              <p>Ask a question</p>
+            </button>
+          </div>
         </div>
       </div>
     </div>
