--- a/src/app/faq/questions/questions.component.html
+++ b/src/app/faq/questions/questions.component.html
@@ -1,7 +1,15 @@
 <section class="questions">
   <div class="container py-5">
     <div class="row py-5">
-      <div class="col-md-3">stuff</div>
+      <div class="col-md-3">
+        <div>
+          <img
+            src="../../../assets/images/question.jpg"
+            alt=""
+            class="img-fluid"
+          />
+        </div>
+      </div>
       <div class="col-md-9">
         <div class="accordion" id="accordionExample">
           <div class="accordion-item">
