--- a/src/app/faq/faq-info/faq-info.component.html
+++ b/src/app/faq/faq-info/faq-info.component.html
@@ -1,1 +1,7 @@
-<p>faq-info works!</p>
+<section class="faq-info">
+  <div class="container">
+    <div class="row">
+      <div class="col"></div>
+    </div>
+  </div>
+</section>
