--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -2,7 +2,7 @@
   //background-color: $color-active;
   background-image: radial-gradient($color-blue, $color-active);
   color: $color-white;
-  border-radius: 20px;
+  border-radius: 1rem;
   transition: all 0.2s;
   font-size: 1.8rem;
 
