--- a/src/app/home/courses/courses.component.scss
+++ b/src/app/home/courses/courses.component.scss
@@ -15,8 +15,10 @@
   margin: 0 auto;
   border-radius: none;
   //border: none;
-  border: 2px solid $color-blue;
-  background-color: $color-paleBlue;
+  //border: 2px solid $color-blue;
+  //background-color: $color-paleBlue;
+  background-image: linear-gradient(to top right, $color-active, $color-blue);
+  color: $color-white;
 
   &-img-top {
     width: 100%;
