--- a/src/app/courses/course-card/course-card.component.scss
+++ b/src/app/courses/course-card/course-card.component.scss
@@ -12,6 +12,15 @@
 
 h4 {
   color: $color-altOrange;
+  // transition: all 0.5s;
+
+  // &:hover {
+  //   color: $color-white;
+  // }
+}
+
+.info-text {
+  color: $color-altOrange;
   transition: all 0.5s;
 
   &:hover {
