--- a/src/app/courses/course-info/course-info.component.html
+++ b/src/app/courses/course-info/course-info.component.html
@@ -27,9 +27,7 @@
                 <i class="fa fa-map-marker"></i> Location:
                 {{ displayCourse.location }}.
               </p>
-              <p>
-                <i class="fa fa-award-o"></i> Price: {{ displayCourse.price }}.
-              </p>
+              <p>&#164; Price: {{ displayCourse.price }}.</p>
             </div>
             <p class="card-text">
               {{ displayCourse.information | wordCut: 70 }}
