--- a/src/app/home/about/about.component.html
+++ b/src/app/home/about/about.component.html
@@ -26,7 +26,7 @@
         </div>
       </div>
       <div class="col-md-6 about_image my-auto">
-        <div class="img-fluid text-center">
+        <div class="img-fluid text-right">
           <img src="../../../assets/images/first-aid-kit2.jpg" alt="" />
         </div>
       </div>
