--- a/src/app/contact/contact-form/contact-form.component.scss
+++ b/src/app/contact/contact-form/contact-form.component.scss
@@ -12,7 +12,7 @@ form {
   }
 
   & label {
-    color: $color-blue;
+    color: $color-active;
     padding-left: 1.5rem;
     font-size: 1.6rem;
   }
@@ -55,7 +55,7 @@ form {
     }
 
     & p {
-      color: $color-blue;
+      color: $color-active;
     }
 
     & p .fa {
