--- a/src/app/contact/contact-form/contact-form.component.html
+++ b/src/app/contact/contact-form/contact-form.component.html
@@ -5,9 +5,9 @@
         class="py-5"
         (ngSubmit)="onCaptureForm(formData)"
         #formData="ngForm"
+        autocomplete="off"
       >
         <div class="mb-3">
-          <label for="name" class="form-label">Name</label>
           <input
             type="text"
             class="form-control"
@@ -24,14 +24,14 @@
           >
             Please enter a valid name.
           </div>
+          <label for="name" class="form-label">Full Name</label>
         </div>
         <div class="mb-3">
-          <label for="email" class="form-label">Email Address</label>
           <input
             type="email"
             class="form-control"
             id="email"
-            placeholder="Valid email"
+            placeholder="Email Address"
             ngModel
             name="email"
             required
@@ -47,9 +47,9 @@
           >
             Please enter a valid email.
           </div>
+          <label for="email" class="form-label">Email Address</label>
         </div>
         <div class="mb-3">
-          <label for="phone" class="form-label">Phone</label>
           <input
             type="text"
             class="form-control"
@@ -66,9 +66,9 @@
           >
             Please enter a valid phone number.
           </div>
+          <label for="phone" class="form-label">Phone</label>
         </div>
         <div class="mb-3">
-          <label for="subject" class="form-label">Subject</label>
           <input
             type="text"
             class="form-control"
@@ -85,9 +85,9 @@
           >
             Please enter a subject.
           </div>
+          <label for="subject" class="form-label">Subject</label>
         </div>
         <div class="mb-3">
-          <label for="message" class="form-label">Message</label>
           <textarea
             name="message"
             id="message"
@@ -105,6 +105,7 @@
           >
             Please enter a message.
           </div>
+          <!-- <label for="message" class="form-label">Message</label> -->
         </div>
 
         <div class="button-container">
