--- a/src/app/contact/contact-form/contact-form.component.scss
+++ b/src/app/contact/contact-form/contact-form.component.scss
@@ -13,8 +13,9 @@ form {
 
   & label {
     color: $color-active;
-    padding-left: 1.5rem;
-    font-size: 1.6rem;
+    padding-left: 0.9rem;
+    font-size: 1.3rem;
+    transition: all 0.3s;
   }
 
   & input,
@@ -24,7 +25,7 @@ form {
     border-bottom: 1px solid $color-blue;
     background-color: $color-paleBlue;
     border-radius: 0;
-    font-size: 1.6rem;
+    font-size: 1.5rem;
   }
 
   & input.ng-invalid.ng-touched,
@@ -49,17 +50,18 @@ form {
     width: 80%;
     border-radius: 5px;
     box-shadow: 5px 1rem 2rem $color-blue;
-
+    background-image: linear-gradient(to top right, $color-active, $color-blue);
     @media only screen and (max-width: 600px) {
       box-shadow: 0px 1rem 2rem $color-blue;
+      width: 100%;
     }
 
     & p {
-      color: $color-active;
+      color: $color-white;
     }
 
     & p .fa {
-      color: $color-crimson;
+      color: $color-altOrange;
     }
   }
 }
@@ -71,4 +73,10 @@ form {
   form {
     margin: 4rem 0rem;
   }
+}
+
+input:placeholder-shown ~ label {
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(-4rem);
 }
