content to shop section/product added to shop page

--- a/src/app/home/shop/shop.component.html
+++ b/src/app/home/shop/shop.component.html
@@ -1,7 +1,33 @@
 <section>
   <div class="container shop">
-    <div class="row">
-      <div class="col">Shop section here</div>
+    <div class="row py-5">
+      <div class="col-md-6">
+        <h2>A Leading Distributor of First Aid Supplies</h2>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
+          nam quo accusamus natus provident reprehenderit itaque, ea alias quia
+          voluptatem.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam atque,
+          dolores rerum tenetur quod temporibus molestiae necessitatibus?
+          Ducimus neque tempora ex repellendus, nobis accusantium atque! Ea illo
+          vitae aliquid laborum culpa esse quam iure nostrum exercitationem,
+          dolorum natus nihil quisquam.
+        </p>
+        <button class="btn btn-blue my-5" (click)="onToShop()">
+          More First Aid Products
+        </button>
+      </div>
+      <div class="col-md-6">
+        <div class="">
+          <img
+            src="../../../assets/images/first-aid-kit3.png"
+            class="img-fluid"
+            alt=""
+          />
+        </div>
+      </div>
     </div>
   </div>
 </section>
