space added on home page shop+testimonial

--- a/src/app/home/shop/shop.component.scss
+++ b/src/app/home/shop/shop.component.scss
@@ -7,3 +7,9 @@ section {
 .shop {
   color: $color-white;
 }
+
+@media only screen and (max-width: 768px) {
+  .firstShopParagraph {
+    display: none;
+  }
+}
