--- a/src/app/home/testimonial/testimonial.component.html
+++ b/src/app/home/testimonial/testimonial.component.html
@@ -40,7 +40,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-6 testimonial-static-text">
         <h3 class="mb-4">First Aider Customer Testimonials</h3>
         <p class="mb-0">
           Lorem ipsum dolor sit amet consectetur adipisicing elit.
