--- a/src/app/home/shop/shop.component.html
+++ b/src/app/home/shop/shop.component.html
@@ -2,13 +2,13 @@
   <div class="container shop">
     <div class="row py-5">
       <div class="col-md-6">
-        <h2>A Leading Distributor of First Aid Supplies</h2>
-        <p>
+        <h2 class="pb-4">A Leading Distributor of First Aid Supplies</h2>
+        <p class="firstShopParagraph">
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
           nam quo accusamus natus provident reprehenderit itaque, ea alias quia
           voluptatem.
         </p>
-        <p>
+        <p class="secondShopParagraph">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam atque,
           dolores rerum tenetur quod temporibus molestiae necessitatibus?
           Ducimus neque tempora ex repellendus, nobis accusantium atque! Ea illo
@@ -19,7 +19,7 @@
           More First Aid Products
         </button>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-6 my-auto">
         <div class="">
           <img
             src="../../../assets/images/first-aid-kit3.png"
