--- a/src/app/home/testimonial/testimonial.component.scss
+++ b/src/app/home/testimonial/testimonial.component.scss
@@ -26,3 +26,13 @@ section {
     padding: 5rem;
   }
 }
+
+.testimonial-static-text {
+  padding-left: 10rem;
+}
+
+@media only screen and (max-width: 768px) {
+  .testimonial-static-text {
+    padding-left: 0;
+  }
+}
