product images added

--- a/src/app/shop/products/products.component.html
+++ b/src/app/shop/products/products.component.html
@@ -1,20 +1,23 @@
-<section>
+<section class="products">
   <div class="container shop">
     <div class="row">
       <div
-        class="col-lg-4 mt-4"
+        class="col-lg-3 col-md-4 mt-4"
         *ngFor="let product of productArray; let i = index"
       >
-        <div class="card" *ngIf="i < 3">
+        <div class="card" *ngIf="i < 12">
           <img
             src="{{ product.image }}"
-            class="card-img-top"
+            class="card-img-top img-fluid"
             alt="{{ product.title }}"
           />
           <div class="card-body">
             <h5 class="card-title mx-2">{{ product.title }}</h5>
             <p class="card-text">
               {{ product.description | wordCut }}
+            </p>
+            <p class="card-text">
+              {{ product.cost }}
             </p>
           </div>
         </div>
