--- a/src/app/faq/questions/questions.component.scss
+++ b/src/app/faq/questions/questions.component.scss
@@ -1,5 +1,5 @@
-@import "../../../styles/styles.scss";
-
+@import "../../../styles/helpers/variables";
+@import "../../../styles/components/buttons";
 button {
   width: 100%;
 }
