--- a/src/app/about-us/advice/advice.component.scss
+++ b/src/app/about-us/advice/advice.component.scss
@@ -1,4 +1,5 @@
-@import "../../../styles/styles.scss";
+@import "../../../styles/helpers/variables";
+@import "../../../styles/components/buttons";
 
 .advice {
   height: 40rem;
