--- a/src/app/about-us/what-we-do/what-we-do.component.scss
+++ b/src/app/about-us/what-we-do/what-we-do.component.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/styles.scss";
+@import "../../../styles/helpers/variables";
 
 section {
   background-image: linear-gradient(to top left, $color-blue, $color-active);
