--- a/src/app/about-us/who-we-are/who-we-are.component.scss
+++ b/src/app/about-us/who-we-are/who-we-are.component.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/styles.scss";
+@import "../../../styles/helpers/variables";
 
 .who-we-are {
   background-color: $color-paleBlue;
