--- a/src/app/contact/contact-form/contact-form.component.scss
+++ b/src/app/contact/contact-form/contact-form.component.scss
@@ -1,4 +1,6 @@
-@import "../../../styles/styles.scss";
+//@import "../../../styles/styles.scss";
+@import "../../../styles/helpers/variables";
+@import "../../../styles/components/buttons";
 
 form {
   margin: 0 auto;
