--- a/src/app/courses/course-info/course-info.component.scss
+++ b/src/app/courses/course-info/course-info.component.scss
@@ -1,4 +1,6 @@
-@import "../../../styles/styles.scss";
+//@import "../../../styles/styles.scss";
+@import "../../../styles/helpers/variables";
+//@import "../../../styles/components/buttons";
 
 .card {
   //border: 2px solid $color-blue;
