--- a/src/app/faq/faq-contact/faq-contact.component.scss
+++ b/src/app/faq/faq-contact/faq-contact.component.scss
@@ -1,5 +1,4 @@
-@import "../../../styles/styles.scss";
-
+@import "../../../styles/helpers/variables";
 .faq-questions {
   height: 35rem;
   text-align: center;
