--- a/src/app/home/courses/courses.component.scss
+++ b/src/app/home/courses/courses.component.scss
@@ -1,4 +1,5 @@
-@import "../../../styles/styles.scss";
+@import "../../../styles/helpers/variables";
+@import "../../../styles/components/buttons";
 
 .col.heading {
   display: flex;
