--- a/src/app/home/shop/shop.component.scss
+++ b/src/app/home/shop/shop.component.scss
@@ -1,4 +1,5 @@
-@import "../../../styles/styles.scss";
+@import "../../../styles/helpers/variables";
+@import "../../../styles/components/buttons";
 
 section {
   background-image: linear-gradient(to bottom left, $color-blue, $color-active);
