--- a/src/app/home/testimonial/testimonial.component.scss
+++ b/src/app/home/testimonial/testimonial.component.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/styles.scss";
+@import "../../../styles/helpers/variables";
 
 section {
   background-color: $color-paleBlue;
