--- a/src/app/shop/products/products.component.scss
+++ b/src/app/shop/products/products.component.scss
@@ -1,4 +1,5 @@
-@import "../../../styles/styles.scss";
+@import "../../../styles/helpers/variables";
+@import "../../../styles/components/buttons";
 .card {
   width: 100%;
   margin: 0 auto;
